--- a/project/public/index.html
+++ b/project/public/index.html
@@ -6,6 +6,18 @@
     <title>Personal Webpage</title>
   </head>
   <body>
+         <div class="background">
+  <!-- Using common classes to minimize redundancy -->
+            <span class="ball"></span>
+            <span class="ball"></span>
+            <span class="ball"></span>
+            <span class="ball"></span>
+            <span class="ball"></span>
+            <span class="ball"></span>
+            </div>
+  
+
+
     <div id="root"></div>
   </body>
 </html>
